chore(DevSecOps): hash refactor
Author: devznagl@gmail.com
