# backend/swagger.json
@@ -392,7 +392,7 @@
         }
       }
     },
-    "/v1/jogador/many": {
+    "/v1/jogador-many": {
       "get": {
         "summary": "Obtém todos os jogadores",
         "tags": [
@@ -749,7 +749,7 @@
         }
       }
     },
-    "/v1/quadra/many": {
+    "/v1/quadra-many": {
       "get": {
         "summary": "Obtém todas as quadras",
         "tags": [
@@ -1193,7 +1193,7 @@
         }
       }
     },
-    "/v1/reserva/many": {
+    "/v1/reserva-many": {
       "get": {
         "summary": "Obtém todas as reservas",
         "tags": [
